Fix language menu and main menu in English view on Mobile

--- a/app/assets/stylesheets/Custom.css
+++ b/app/assets/stylesheets/Custom.css
@@ -2032,7 +2032,7 @@ h3.Thumbnail_Title {
     color: white;
     font-size: 18px;
     margin-top: 8px;
-    padding: 6px 10px;
+    padding: 8px 12px;
 }
 
     .btn-search:hover {
